chore(nginx): normalize TLS policy and OCSP snippets for gate

--- a/infra/nginx/sites-enabled/lituationdjs.migrahosting.com.conf
+++ b/infra/nginx/sites-enabled/lituationdjs.migrahosting.com.conf
@@ -25,10 +25,10 @@ server {
     location ~ /\. { deny all; }
 
     listen [::]:443 ssl; # managed by Certbot
+    include /etc/nginx/snippets/ocsp-off.conf;
     listen 443 ssl; # managed by Certbot
     ssl_certificate /etc/letsencrypt/live/lituationdjs.migrahosting.com/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/lituationdjs.migrahosting.com/privkey.pem; # managed by Certbot
-    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
 
