--- a/infra/nginx/sites-enabled/panel.migrahosting.com.conf
+++ b/infra/nginx/sites-enabled/panel.migrahosting.com.conf
@@ -10,13 +10,12 @@ server {
 
 server {
     listen 443 ssl;
+    include /etc/nginx/snippets/ocsp-off.conf;
     listen [::]:443 ssl;
     server_name panel.migrahosting.com;
 
     ssl_certificate /etc/letsencrypt/live/panel.migrahosting.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/panel.migrahosting.com/privkey.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
 
     root /srv/web/mpanel-frontend;
     index index.html;
