--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -34,8 +34,8 @@ http {
 	# SSL Settings
 	##
 
-    # 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
-    # 	ssl_prefer_server_ciphers on;
+	# Global TLS policy (enforced by CI)
+	include /etc/nginx/snippets/tls-common.conf;
 
 	##
 	# Logging Settings
