--- a/infra/nginx/sites-enabled/call.migrahosting.com.conf
+++ b/infra/nginx/sites-enabled/call.migrahosting.com.conf
@@ -21,6 +21,7 @@ server {
 
 server {
     listen 443 ssl;
+    include /etc/nginx/snippets/ocsp-off.conf;
     listen [::]:443 ssl;
     server_name call.migrahosting.com;
 
@@ -30,11 +31,6 @@ server {
     ssl_trusted_certificate /etc/letsencrypt/live/call.migrahosting.com/chain.pem;
 
     # SSL settings
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 1d;
     ssl_stapling on;
     ssl_stapling_verify on;
 
