--- a/infra/nginx/sites-enabled/premtint.com.conf
+++ b/infra/nginx/sites-enabled/premtint.com.conf
@@ -13,6 +13,7 @@ server {
 # HTTPS
 server {
     listen 443 ssl;
+    include /etc/nginx/snippets/ocsp-off.conf;
     listen [::]:443 ssl;
     server_name premtint.com www.premtint.com;
     client_max_body_size 256M;
@@ -22,11 +23,6 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/premtint.com/privkey.pem;
 
     # SSL settings
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 1d;
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
