--- a/infra/nginx/sites-available/voice.migrahosting.com.conf
+++ b/infra/nginx/sites-available/voice.migrahosting.com.conf
@@ -9,8 +9,9 @@ server {
 }
 
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    include /etc/nginx/snippets/ocsp-off.conf;
+    listen [::]:443 ssl;
     server_name voice.migrahosting.com;
 
     # SSL certificates (Let's Encrypt)
@@ -19,13 +20,6 @@ server {
     ssl_trusted_certificate /etc/letsencrypt/live/voice.migrahosting.com/chain.pem;
 
     # SSL settings
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 1d;
-    ssl_stapling on;
-    ssl_stapling_verify on;
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
