--- a/infra/nginx/sites-available/lituationdjs.migrahosting.com.conf
+++ b/infra/nginx/sites-available/lituationdjs.migrahosting.com.conf
@@ -26,6 +26,7 @@ server {
 
     listen [::]:443 ssl; # managed by Certbot
     listen 443 ssl; # managed by Certbot
+    include /etc/nginx/snippets/ocsp-off.conf;
     ssl_certificate /etc/letsencrypt/live/lituationdjs.migrahosting.com/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/lituationdjs.migrahosting.com/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
